olvide contraseña, limpieza de db y errores